	  - Put a counter next to the email alias in User details->Registered address to keep track on
	    how MANY aliases there are.
	  - Instead of showing the uid value of a user allowed access to a physical host in
	    'Domain details->Host Control->Host Control Access', "translate" to a 'human readable'
	    value using pql_left_htmlify_userlist()

	API changes
	  - Rewrite (simplify) the API. Move the following function into include/pql.inc as methods
	    of the pql class:
	      include/pql_search.inc:pql_search(),
	      include/pql_search.inc:pql_get_attribute(),
	      include/pql_search.inc:pql_get_dn()
	      include/pql_write.inc:pql_write_add()
	      include/pql_write.inc:pql_write_mod()
	      include/pql_write.inc:pql_write_del()
	      include/pql_write.inc:pql_write_ren()
	    + This lead to changes in the rest of the API as well. No need to call functions with
	      the LDAP linkid any more. Instead, since the pql class handle is global any way, just
	      import it in any functions that need it.
	  - Prefix the kadmin_* functions with the usual 'pql_' prefix.
	  - Rewrite the sudoers plugin to be more like rest of phpQLAdmin (i.e. file include/attrib.sudoers.inc,
	    sudo_add.php, sudo_detail.php and sudo_modify.php instead of one, big, huge 'sudo_modify.php' which
	    did everything.
	  - Extra option to pql->search() added: encode (yes or no - default no for backward compability).
	    + Make sure to leave (if encode=1) all values un-decoded. This so it/they can be used in/by
	      dump_object.php to create a usable LDIF from/of the object(s) where encoded values won't
	      be usable if (re)loaded into an LDAP database..
	  - Speed up domain_detail.php by only retreving the attributes of interest for the specific view.

	Misc changes
	  - Added Strong password option to meet SOX & DSS/PCI compliance
	  - Added branch option to start in users own account when logging in (this is experimental don't use in production)