@@ -10,13 +10,15 @@
 #
 #      phpQLAdmin Elements              3
 #        Objectclasses                    1
-#          phpQLAdminConfig                 1
-#          phpQLAdminGlobal                 2
-#          phpQLAdminBranch                 3
-#          phpQLAdminInfo                   5
-#          phpQLAdminUser                   6
-#          phpQLAdminUserTemplate           7
-#          phpQLAdminMXHostAddition         8
+#          phpQLAdminConfig                  1
+#          phpQLAdminGlobal                  2
+#          phpQLAdminBranch                  3
+#          phpQLAdminInfo                    5
+#          phpQLAdminUser                    6
+#          phpQLAdminUserTemplate            7
+#          phpQLAdminMXHostAddition          8
+#          phpQLAdminWebACL                  0
+#          phpQLAdminPasswordPolicy         10
 #
 #        Attributes                       2
 #          Toggles                          1
@@ -121,13 +123,15 @@
 #            radiusConfigIdentity            26
 #            webSrvAdministrator             27
 #            dNSAdministrator                28
+#            passwordPolicyName              29
+#            passwordPolicyDesc              30
 # --------------------------------------------
 #
 # *mod_cfg_ldap => Also defined (with other name) in mod_cfg_ldap
 # availible from http://sourceforge.net/projects/modcfgldap/
 # See doc/README.apache for more information.
 
-# $Id: phpQLAdmin.schema,v 2.70 2006-12-28 02:19:38 aaron Exp $
+# $Id: phpQLAdmin.schema,v 2.71 2007-03-05 10:12:29 turbo Exp $
 
 # PQL_ATTR_SHOW_USERS (true | false)
 attributetype ( 1.3.6.1.4.1.8767.3.2.1.1 NAME 'showUsers'
@@ -772,6 +776,20 @@ attributetype ( 1.3.6.1.4.1.8767.3.2.4.28 NAME 'dNSAdministrator'
   DESC 'DNS information administrator(s)?'
   SUP owner)
 
+# PQL_ATTR_PPOLICY_NAME
+attributetype ( 1.3.6.1.4.1.8767.3.2.4.29 NAME 'passwordPolicyName'
+  DESC 'Password Policy Name'
+  EQUALITY caseIgnoreMatch
+  SYNTAX 1.3.6.1.4.1.1466.115.121.1.15{64}
+  SINGLE-VALUE )
+
+# PQL_ATTR_PPOLICY_DESC
+attributetype ( 1.3.6.1.4.1.8767.3.2.4.30 NAME 'passwordPolicyDesc'
+  DESC 'Password Policy Description'
+  EQUALITY caseIgnoreMatch
+  SYNTAX 1.3.6.1.4.1.1466.115.121.1.15{64}
+  SINGLE-VALUE )
+
 # -----------------------------------------
 
 objectclass ( 1.3.6.1.4.1.8767.3.1.1
@@ -861,6 +879,12 @@ objectclass ( 1.3.6.1.4.1.8767.3.1.9
   DESC 'phpQLAdmin version of groupOfUniqueNames'
   MUST ( cn $ uniqueMember )
   SUP top AUXILIARY )
+
+objectclass ( 1.3.6.1.4.1.8767.3.1.10
+  NAME 'phpQLAdminPasswordPolicy'
+  DESC 'phpQLAdmin additions to the pwdPolicy'
+  MUST ( passwordPolicyName $ passwordPolicyDesc )
+  SUP top STRUCTURAL )
 
 #
 # Local variables:
