@@ -1,0 +1,81 @@
+<?php
+// Plugin for the ppolicy overlay in OpenLDAP >v2.3
+// $Id: config_details-ppolicy.inc,v 1.1 2007-03-05 10:12:27 turbo Exp $
+require($_SESSION["path"]."/include/pql_ppolicy.inc");
+$ppolicies = pql_get_ppolicies();
+
+// Simplicity - with this we can have ONE single foreach() loop to output
+// the whole view!
+// TODO: Do this elsewhere to :)
+$table_columns = array(pql_get_define("PQL_ATTR_PPOLICY_NAME")					=> $LANG->_('Password Policy Name'),
+					   pql_get_define("PQL_ATTR_PPOLICY_DESC")					=> $LANG->_('Password Policy Description'),
+					   pql_get_define("PQL_ATTR_PPOLICY_ATTR")					=> $LANG->_('Password attribute'),
+					   pql_get_define("PQL_ATTR_PPOLICY_MINAGE")				=> $LANG->_('Minimum age'),
+					   pql_get_define("PQL_ATTR_PPOLICY_MAXAGE")				=> $LANG->_('Maximum age'),
+					   pql_get_define("PQL_ATTR_PPOLICY_INHIST")				=> $LANG->_('Numer of old passwords in history'),
+					   pql_get_define("PQL_ATTR_PPOLICY_CHKQUAL")				=> $LANG->_('Password control/verification type'),
+					   pql_get_define("PQL_ATTR_PPOLICY_MINLEN")				=> $LANG->_('Minimum password length'),
+					   pql_get_define("PQL_ATTR_PPOLICY_EXPIRE_WARNING")		=> $LANG->_('Password expiration warning'),
+					   pql_get_define("PQL_ATTR_PPOLICY_GRACEAUTHLIMIT")		=> $LANG->_('Number of times to allow expired password'),
+					   pql_get_define("PQL_ATTR_PPOLICY_LOCKOUT")				=> $LANG->_('Lock account after failed attempt'),
+					   pql_get_define("PQL_ATTR_PPOLICY_LOCKOUT_DURATION")		=> $LANG->_('Time between failed attempt and new attempt'),
+					   pql_get_define("PQL_ATTR_PPOLICY_MAXFAILURE")			=> $LANG->_('Maximum failed attempts before lock'),
+					   pql_get_define("PQL_ATTR_PPOLICY_FAILURE_COUNT_INTERVAL")=> $LANG->_('Time for old failed attempts to be forgotten'),
+					   pql_get_define("PQL_ATTR_PPOLICY_MUST_CHANGE")			=> $LANG->_('Force password change'),
+					   pql_get_define("PQL_ATTR_PPOLICY_ALLOW_USER_CHANGE")		=> $LANG->_('Allow user to change password'),
+					   pql_get_define("PQL_ATTR_PPOLICY_SAFE_MODIFY")			=> $LANG->_('Force the use of old password when changing'),
+					   pql_get_define("PQL_ATTR_PPOLICY_CHECK_MODULE")			=> $LANG->_('Additional password check module'));
+?>
+  <br>
+
+  <table cellspacing="0" cellpadding="3" border="0">
+    <th colspan="3" align="left"><?=$LANG->_('Global Password Policies')?>
+<?php for($i=0; $ppolicies[$i]; $i++) { ?>
+<?php	foreach($table_columns as $attrib => $text) {
+	  $link = 'config_edit_attribute.php?attrib='.$attrib;
+	  $class=pql_format_table(0);
+?>
+      <tr>
+        <td class="title"><?=$text?></td>
+<?php if($attrib == pql_get_define("PQL_ATTR_PPOLICY_NAME")) { ?>
+        <td class="title">
+<?php } else { ?>
+        <td class="<?=$class?>">
+<?php } ?>
+          <?=$ppolicies[$i][$attrib]?>
+        </td>
+
+        <td class="<?=$class?>" align="right">
+          <a href="<?=$link?>"><img src="images/edit.png" width="12" height="12" border="0" alt="<?=$LANG->_('Change policy value')?>"></a>
+        </td>
+      </tr>
+<?php	} ?>
+
+      <tr><td colspan="3"></td></tr>
+
+<?php } ?>
+      <tr>
+<?php if(!$ppolicies) { ?>
+        <td class="title"><?=$LANG->_('No policies defined')?></td>
+<?php } else { ?>
+        <td class="title"></td>
+<?php }
+
+      $class=pql_format_table(0);
+?>
+        <td class="<?=$class?>" colspan="2">
+          <a href="config_ppolicy_add.php?rootdn=<?=urlencode($_SESSION["BASE_DN"][0])?>"><?=$LANG->_('Add policy')?></a>
+        </td>
+      </tr>
+    </th>
+  </table>
+<?php
+
+/*
+ * Local variables:
+ * mode: php
+ * mode: font-lock
+ * tab-width: 4
+ * End:
+ */
+?>
